edition = "2023";

option go_package = "./authservice";

package authservice;

service AuthService {
    rpc Register (RegisterRequest) returns (MessageResponse) {}
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string full_name = 3;
    string phone_number = 4;
}

message MessageResponse {
    string message = 1;
}